<resources>
    <string name="app_name">The Dog Walker</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="add_profile_image">Add Profile Image</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="address">Address</string>
    <string name="apt_number">Apt Number</string>
    <string name="zip_code">Zip Code</string>
    <string name="phone_number">Phone Number</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="company_code">Company Code</string>
    <string name="company_name_optional">Company Name (optional)</string>
    <string name="add">Add</string>
    <string name="are_you_a_dog_walker">Are you a dog walker?</string>
    <string name="or">OR</string>
    <string name="are_you_a_pet_owner">Are you a pet owner?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_out">Sign Out</string>
    <string name="add_schedule">Add Schedule</string>
    <string name="schedules">Schedules</string>
    <string name="clients">Clients</string>
    <string name="profile">Profile</string>
    <string name="name">Name:</string>
    <string name="emailLbl">Email:</string>
    <string name="phone">Phone:</string>
    <string name="addressLbl">Address:</string>
    <string name="company_name">Company Name:</string>
    <string name="add_pet_image">Add Pet Image</string>
    <string name="pet_name">Pet Name</string>
    <string name="birthday">Birthday</string>
    <string name="medication">Medication</string>
    <string name="vaccines">Vaccines</string>
    <string name="special_instructions">Special Instructions</string>
    <string name="emergency_contact_name">Emergency Contact Name</string>
    <string name="emergency_contact_phone_number">Emergency Contact Phone Number</string>
    <string name="vet_name">Vet Name</string>
    <string name="vet_phone">Vet Phone</string>
    <string name="breed">Breed</string>
    <string name="title_activity_owner_home">OwnerHomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="edit">Edit</string>
    <string name="pet_profile">Pet Profile</string>
    <string name="my_profile">My Profile</string>
    <string name="petName">Pet Name:</string>
    <string name="birth_date">Birth Date</string>
    <string name="_04_22_2015">04/22/2015</string>
    <string name="none">None</string>
    <string name="pet_clinic">Pet Clinic</string>
    <string name="_407_124_5455">407-124-5455</string>
    <string name="scott_o_hara">Scott O\'Hara</string>
    <string name="ohara1822_me_com">ohara1822@me.com</string>
    <string name="profilePhone">Phone</string>
    <string name="_954_774_8533">954-774-8533</string>
    <string name="_2256_gator_drive">2256 Gator Drive.</string>
    <string name="orlando_fl_32802">Orlando, FL 32802</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="brittney">Brittney</string>
    <string name="_561_215_6366">561-215-6366</string>
    <string name="walker_comapny_name">Company Name</string>
    <string name="the_dog_guy">The Dog Guy</string>
    <string name="date">Date</string>
    <string name="duration">Duration</string>
    <string name="time">Time</string>
    <string name="_08_01_2017">08/01/2017</string>
    <string name="_2_00_pm">2:00 PM</string>
    <string name="_30_minutes">30 Minutes</string>
    <string name="check_out">Check Out</string>
    <string name="check_in">Check In</string>
    <string name="directions">Directions</string>
    <string name="apollo">Apollo</string>
    <string name="pitbill_mix">Pitbill Mix</string>
    <string name="_05_05_2015">05/05/2015</string>
    <string name="yes">Yes</string>
    <string name="_407_321_2144">407-321-2144</string>
    <string name="scott">Scott</string>
    <string name="brittney_gault">Brittney Gault</string>
</resources>
