<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ohara.thedogwalker.login.LoginActivity"
    android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120sp"
            android:layout_marginTop="20dp"
            android:src="@drawable/icon"
            />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress"
        android:textAlignment="textStart"
        android:hint="@string/email"/>
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:textAlignment="textStart"
        android:hint="@string/password"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <Button
        android:id="@+id/forgetButton"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:text="@string/forgot_password"
        android:textAlignment="textEnd"
        android:textColor="#0099CC"
        android:background="@android:color/transparent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="@string/login"
            android:background="#0099CC"
            android:textColor="#ffffff"
            android:textSize="20sp"/>

    </LinearLayout>

<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginTop="80dp"
android:orientation="horizontal">
    <Button
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:text="@string/register"
        android:background="@android:color/transparent"
        android:textColor="#0099CC"
        android:textSize="25sp"/>
</LinearLayout>

</LinearLayout>
